--- a/com.jeden.tel/res/values/strings.xml
+++ b/com.jeden.tel/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="app_name">com.jeden.tel</string>
+    <string name="app_name">来电黑名单</string>
     <string name="hello_world">hello_world</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
